# RolePlaySystem

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  CHINESE_LOCALIZATION_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  ENVIRONMENTS.md  GEMINI.md  JULES.md  LICENSE  Makefile  PACKAGE_TESTING.md  POC_TO_PRODUCTION_MIGRATION.md  README.md  RESOURCE_ARCHITECTURE.md  STORAGE_CONFIG.md  VOICE_EXPERIMENT.md  example_cloud_storage.py  fix-imports.py  get_test_credentials.py  pytest.ini  storage.md  test_voice_backend.py  test_voice_chat.html  test_voice_final.py
.devcontainer/: devcontainer.json
config/: beta.yaml  dev.yaml  evaluation_agents.yaml  poc.yaml  prod-gcs.yaml  prod-s3.yaml  (+2 more)
src/python/role_play/: MANIFEST.in  README.md  pyproject.toml  requirements-all.txt  requirements-test.txt  requirements.txt  setup.py
src/python/role_play/chat/: __init__.py  adk_client.py  agent_config.py  chat_agent.py  chat_handler.py  chat_logger.py  content_loader.py  handler.py  models.py  orchestrator_agent.py  session_service.py  test_chat_handler.py  test_content_loader.py
src/python/role_play/common/: GCSBackend.py  S3Backend.py  __init__.py  auth.py  environment.py  exceptions.py  logging_config.py  models.py  redis_locking.py  redis_session_service.py  resource_loader.py  storage.py  storage_factory.py  storage_monitoring.py  time_utils.py
src/python/role_play/dev_agents/: README.md
src/python/role_play/dev_agents/evaluator_agent/: __init__.py  agent.py  model.py  tools.py
src/python/role_play/dev_agents/evaluator_agent/sub_agents/: analysis_agent.py  summarize_agent.py
src/python/role_play/dev_agents/roleplay_agent/: __init__.py  agent.py  tools.py
src/python/role_play/evaluation/: __init__.py  agents.py  export.py  handler.py  models.py  tools.py
src/python/role_play/evaluation/tests/: test_agents.py  test_models.py  test_tools.py
src/python/role_play/resources/: __init__.py  scenarios.json  scenarios_zh-TW.json
src/python/role_play/server/: __init__.py  auth_decorators.py  base_handler.py  base_server.py  config.py  config_loader.py  dependencies.py  example_role_usage.py  models.py  role_play_server.py  user_account_handler.py
src/python/role_play/voice/: __init__.py  adk_voice_service.py  config.py  handler.py  models.py  transcript_manager.py  voice_config.py
(+144 files in other folders)
